--- a/src/Loto.Api/appsettings.json
+++ b/src/Loto.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Prediction": {
+    "DefaultCount": 10,
+    "MaxCount": 100,
+    "RecentWindowDays": 730,
+    "MaxIncludeNumbers": 5,
+    "MaxAttemptsMultiplier": 100
+  },
   "AllowedHosts": "*"
 }
